--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,17 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3346/databasename
+    username: dev
+    password: abcd1234
+#    jpa:
+#    # Show or not log for each sql query; useful for development.
+#    showSql: true
+#    hibernate:
+#      ddlAuto: none
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQL57Dialect
+#    open-in-view: false
 rsa:
   private-key: classpath:certs/private.pem
   public-key: classpath:certs/public.pem
